Add test 23 found bug in WordsOnBoard class isAnyRightAngleNewWord method - yet to fix